--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configuracion Ambiente Desarrollo
-configuracion.autor.nombre=hember
-configuracion.autor.email=humber2010@gmail.com
+configuracion.texto=Configuracion Ambiente Desarrollo .
+configuracion.autor.nombre=hemberLadera
+configuracion.autor.email=hladera2010@gmail.com
